--- a/pokemon.css
+++ b/pokemon.css
@@ -1,12 +1,12 @@
 h1,
 h2 {
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
   color: #ff652f;
 }
 
 * {
   background-color: #272727;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
@@ -17,13 +17,12 @@ button {
   margin-top: 30px;
   background-color: #ff652f;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
   color: #272727;
   border: none;
   font-size: larger;
 }
 
-img {
+.image img {
   display: block;
   margin: 5px auto;
   border: solid 1px;
@@ -46,7 +45,18 @@ img {
 .containerStats {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+}
+
+.TypePV {
+  display: flex;
+}
+
+.imgType img {
+  height: 50px;
+  width: 50px;
+  margin-top: 7px;
+  margin-right: -7px;
+  border-radius: 50px;
 }
 
 .containerStats h2 {
@@ -54,11 +64,32 @@ img {
   margin-right: 20px;
 }
 
-.talents {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+.containerStats .imgType {
+  padding-left: 160px;
 }
 
-.talents span {
+.containerStats .imgType .img {
+  height: 50px;
+  width: 50px;
+}
+
+.pouvoir1,
+.pouvoir2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 75px;
   padding-right: 50px;
+}
+
+.imgEtTalent1,
+.imgEtTalent2 {
+  display: flex;
+}
+
+.imgEtTalent1 img,
+.imgEtTalent2 img {
+  margin-left: -40px;
+  margin-right: 20px;
+  border-radius: 50px;
 }
